--- a/index.html
+++ b/index.html
@@ -121,16 +121,234 @@ textarea{min-height:120px}
 
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+<script>
+firebase.initializeApp({
+  apiKey: "AIzaSyCowDEvUQpBmq7AwUGiC6IuGOudPhi_0kM",
+  authDomain: "vehicle-maintenance-64890.firebaseapp.com",
+  projectId: "vehicle-maintenance-64890",
+});
+const db = firebase.firestore();
+</script>
 
 <header>🚗 SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์</header>
 
 <div class="container">
-  <!-- เนื้อหา UI และ logic เดิมทั้งหมด -->
+
+<div class="card grid">
+  <select id="vehicleSelect"></select>
+  <button onclick="openModal()">➕ เพิ่มประวัติการซ่อม</button>
+  <button class="danger" onclick="confirmDeleteAll()">🗑️ ลบประวัติซ่อมทั้งหมด</button>
+  <button class="danger" onclick="confirmDeleteVehicle()">🚫 ลบรถคันนี้ออกจากระบบ</button>
+</div>
+
+<div class="card">
+<table class="table">
+<thead>
+<tr>
+<th>วันที่</th>
+<th>รถ</th>
+<th>ระบบที่ซ่อม</th>
+<th>อาการเสีย</th>
+<th>ช่าง</th>
+<th>ค่าใช้จ่าย</th>
+<th>รายละเอียด</th>
+<th>ลบ</th>
+</tr>
+</thead>
+<tbody id="tbody"></tbody>
+</table>
+</div>
+
+</div>
+
+<!-- เพิ่มข้อมูล -->
+<div class="modal" id="modal">
+<div class="modal-box">
+<h2>บันทึกการซ่อม</h2>
+
+<div class="form-grid">
+<input id="plate" placeholder="ทะเบียนรถ">
+<input id="brand" placeholder="ยี่ห้อรถ">
+<input id="model" placeholder="รุ่นรถ">
+<input type="date" id="date">
+<input id="mileage" placeholder="เลขไมล์">
+<input id="jobNo" placeholder="เลขที่ใบงาน">
+<input id="system" placeholder="ระบบที่ซ่อม">
+<input id="technician" placeholder="ช่าง">
+<input id="approver" placeholder="ผู้อนุมัติ">
+<textarea id="symptoms" placeholder="อาการเสีย"></textarea>
+<textarea id="parts" placeholder="อะไหล่ที่เปลี่ยน"></textarea>
+<textarea id="note" placeholder="หมายเหตุ"></textarea>
+<input type="number" id="partsCost" placeholder="ค่าอะไหล่">
+<input type="number" id="laborCost" placeholder="ค่าแรง">
+</div>
+
+<div class="grid">
+<button onclick="confirmSave()">บันทึก</button>
+<button class="danger" onclick="closeModal()">ยกเลิก</button>
+</div>
+</div>
+</div>
+
+<!-- confirm -->
+<div class="modal" id="confirmModal">
+<div class="modal-box confirm-box">
+<h2 id="confirmTitle"></h2>
+<p id="confirmText"></p>
+<div class="grid">
+<button onclick="confirmYes()">ยืนยัน</button>
+<button class="danger" onclick="closeConfirm()">ยกเลิก</button>
+</div>
+</div>
+</div>
+
+<!-- detail -->
+<div class="modal" id="detailModal">
+<div class="modal-box">
+<h2>รายละเอียดการซ่อม</h2>
+<div id="detailContent"></div>
+<button class="danger" onclick="closeDetail()">ปิด</button>
+</div>
 </div>
 
 <script>
-if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("/vehicle-maintenance-th/sw.js");
+const modal = document.getElementById("modal");
+const confirmModal = document.getElementById("confirmModal");
+const detailModal = document.getElementById("detailModal");
+const vehicleSelect = document.getElementById("vehicleSelect");
+const tbody = document.getElementById("tbody");
+let confirmAction = null;
+
+function openModal(){ modal.style.display="flex"; }
+function closeModal(){ modal.style.display="none"; }
+
+function openConfirm(t,txt,fn){
+  confirmTitle.textContent=t;
+  confirmText.textContent=txt;
+  confirmAction=fn;
+  confirmModal.style.display="flex";
+}
+function closeConfirm(){
+  confirmModal.style.display="none";
+  confirmAction=null;
+}
+function confirmYes(){
+  if(confirmAction) confirmAction();
+  closeConfirm();
+}
+
+function confirmSave(){
+  openConfirm("บันทึกข้อมูล","ยืนยันการบันทึก?",save);
+}
+
+function loadVehicles(){
+  db.collection("vehicles").onSnapshot(s=>{
+    vehicleSelect.innerHTML="";
+    s.forEach(d=>{
+      let o=document.createElement("option");
+      o.value=d.id;
+      o.textContent=d.id;
+      vehicleSelect.appendChild(o);
+    });
+    if(vehicleSelect.value) loadRepairs(vehicleSelect.value);
+  });
+}
+
+vehicleSelect.onchange=()=>loadRepairs(vehicleSelect.value);
+
+function loadRepairs(v){
+  db.collection("vehicles").doc(v).collection("repairs")
+  .onSnapshot(s=>{
+    tbody.innerHTML="";
+    s.forEach(doc=>{
+      const r=doc.data();
+      const cost=(+r["ค่าอะไหล่"]||0)+(+r["ค่าแรง"]||0);
+      tbody.innerHTML+=`
+<tr>
+<td>${r["วันที่"]||""}</td>
+<td>${v}</td>
+<td>${r["ระบบที่ซ่อม"]||""}</td>
+<td>${r["อาการเสีย"]||""}</td>
+<td>${r["ช่างผู้รับผิดชอบ"]||""}</td>
+<td>${cost}</td>
+<td><button onclick='openDetail(${JSON.stringify(r).replace(/'/g,"&#39;")})'>ดู</button></td>
+<td><button class="danger" onclick="deleteRec('${v}','${doc.id}')">ลบ</button></td>
+</tr>`;
+    });
+  });
+}
+
+function save(){
+  const key = plate.value+" "+brand.value+" "+model.value;
+  const ref = db.collection("vehicles").doc(key);
+
+  ref.set({updated:new Date()},{merge:true});
+  ref.collection("repairs").add({
+    "วันที่":date.value,
+    "เลขไมล์":mileage.value,
+    "เลขที่ใบงาน":jobNo.value,
+    "ระบบที่ซ่อม":system.value,
+    "อาการเสีย":symptoms.value,
+    "อะไหล่ที่เปลี่ยน":parts.value,
+    "ช่างผู้รับผิดชอบ":technician.value,
+    "ผู้อนุมัติ":approver.value,
+    "หมายเหตุ":note.value,
+    "ค่าอะไหล่":partsCost.value,
+    "ค่าแรง":laborCost.value,
+    "เวลาบันทึก":new Date()
+  }).then(closeModal);
+}
+
+function deleteRec(v,id){
+  openConfirm("ลบรายการ","ยืนยันการลบ?",
+    ()=>db.collection("vehicles").doc(v).collection("repairs").doc(id).delete()
+  );
+}
+
+async function confirmDeleteAll(){
+  if(!vehicleSelect.value) return;
+  openConfirm("ลบทั้งหมด","ลบประวัติซ่อมทั้งหมด?",
+    async ()=>{
+      const snap = await db.collection("vehicles")
+        .doc(vehicleSelect.value).collection("repairs").get();
+      const batch=db.batch();
+      snap.forEach(d=>batch.delete(d.ref));
+      await batch.commit();
+    }
+  );
+}
+
+async function confirmDeleteVehicle(){
+  if(!vehicleSelect.value) return;
+  const name=vehicleSelect.value;
+  openConfirm("ลบรถ","ลบรถทั้งคัน?",
+    async ()=>{
+      const ref=db.collection("vehicles").doc(name);
+      const snap=await ref.collection("repairs").get();
+      const batch=db.batch();
+      snap.forEach(d=>batch.delete(d.ref));
+      await batch.commit();
+      await ref.delete();
+    }
+  );
+}
+
+function openDetail(d){
+  let html="";
+  for(const k in d){
+    html+=`<div class="detail-row"><b>${k}</b><div>${d[k]||"-"}</div></div>`;
+  }
+  detailContent.innerHTML=html;
+  detailModal.style.display="flex";
+}
+function closeDetail(){ detailModal.style.display="none"; }
+
+loadVehicles();
+</script>
+
+<script>
+if("serviceWorker" in navigator){
+  navigator.serviceWorker.register("./sw.js");
 }
 </script>
 
